# my-custom-sonos-radio

./: .env.cloud.example  .env.example  .gitignore  .gitmodules  CMakeLists.txt  COMPONENTS.md  Caddyfile  Dockerfile  README.md  demo.sh  deploy.sh  docker-compose.cloud.yml  docker-compose.yml  stop.sh  sync_media.sh
src/: config.h  control_api.cpp  control_api.h  main.cpp  media_handler.cpp  media_handler.h  oauth_handler.cpp  oauth_handler.h  smapi_handler.cpp  smapi_handler.h  sonos_discovery.cpp  sonos_discovery.h  status_page.h  xml_utils.h
